--- a/.github/workflows/cicd-go.yaml
+++ b/.github/workflows/cicd-go.yaml
@@ -8,17 +8,17 @@ on:
     inputs:
       go-version:
         type: string
-        required: true
+        required: false
         description: Go version to use
         default: 1.21.6
       golangci-lint-version:
         type: string
-        required: true
+        required: false
         description: golangci-lint version to use
         default: 1.56.2
       make-target-check:
         type: string
-        required: true
+        required: false
         description: Make target to run for checking
         default: check
 
